argocd/ingress/airflow-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airflow
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`airflow.k8sdatalab.com`)
      kind: Rule
      services:
        - name: airflow-api-server
          port: 8080
