argocd/ingress/argocd-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k8sdatalab.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          namespace: argocd
  tls:
    secretName: wildcard-tls
