argocd/ingress/jupyterhub-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jupyterhub
  namespace: data-platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jupyter.k8sdatalab.com`)
      kind: Rule
      services:
        - name: proxy-public
          port: 80
  tls:
    secretName: wildcard-tls
