argocd/ingress/longhorn-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k8sdatalab.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: wildcard-tls
