argocd/ingress/marquez-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: marquez-api
  namespace: marquez
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`marquez-api.k8sdatalab.com`)
      kind: Rule
      services:
        - name: marquez
          port: 80
  tls:
    secretName: wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: marquez-ui
  namespace: marquez
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`marquez.k8sdatalab.com`)
      kind: Rule
      services:
        - name: marquez-web
          port: 80
  tls:
    secretName: wildcard-tls
